# StuCrs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  PERFORMANCE.md  README.md  REFERENCES.md  ROAD_MAP.md  broadcast_pre.md  compose.yaml  compose.yamlZone.Identifier  readme_en.md  参考文献一覧.txt
.github/workflows/: deploy.yml
cuda_test/: Cargo.toml
cuda_test/src/: cuda_kernel.cu  main.rs
cuda_test/src/kernels/: div.cu
docs/: book.toml
docs/book-basic/: book.toml
docs/book-basic/src/: SUMMARY.md  introduction.md
docs/book-cnn/: book.toml
docs/book-cnn/src/: SUMMARY.md  introduction.md
examples/: mnist_CNN1.rs  mnist_shallow_nn.rs
examples/v1/: mnist_deep_nn.rs
examples/v2/: mnist_deep__nn_v2.rs  mnist_shallow_cnn_v2.rs
my_scratch/: Cargo.toml
my_scratch/src/: main.rs
stucrs/: Cargo.toml
stucrs-gpu/: Cargo.toml
stucrs-gpu/src/: core_new.rs  dataloaders.rs  datasets.rs  functions_new.rs  layers.rs  lib.rs  optimizers.rs
stucrs/src/: Layers.rs  config.rs  core.rs  core_hdv.rs  core_new.rs  dataloaders.rs  datasets.rs  error.rs  functions.rs  functions_cnn.rs  functions_hdv.rs  functions_new.rs  layers.rs  lib.rs  models.rs  optimizers.rs
stucrs/src/functions/: activation_funcs.rs  loss.rs  math.rs  matrix.rs  mod.rs  neural_funcs.rs
stucrs/src/tensor/: LICENSE-APACHE  LICENSE-MIT  NOTICE.md  broadcast.rs  error.rs  lib.rs  mod.rs  ops.rs  shape.rs  tensor.rs
stucrs/src/tensor/backend/: cpu.rs  cuda.rs  mod.rs
stucrs/src/tensor/kernels/: arithmetic.cu  cnn.cu  fill.cu  math.cu  matmul.cu  reduction.cu  transform.cu
stucrs/src/tensor/ndarray_nn/: mod.rs  ndarray_cnn.rs
stucrs_gpu_test/: Cargo.toml
stucrs_gpu_test/src/: main.rs
stucrs_test/: Cargo.toml
stucrs_test/src/: main.rs
stucrs_test/src/kernels/: add.cu  cos.cu  matmul.cu  mul.cu  pow.cu  sub.cu
test_lab/: Cargo.toml
test_lab/src/: main.rs
test_lab/src/kernels/: add.cu  (+2 more)
(+47 files in other folders)
