[package]
name = "cuda_test"
version = "0.1.0"
edition = "2024"

[dependencies]
cudarc={ version = "0.16.1", features = ["cuda-version-from-build-system"]}
ndarray = "0.16.0"
stucrs-gpu = {path = "../stucrs-gpu"}

[dependencies.tensor_frame]
git = "https://github.com/chitono/Tensor-Frame.git"
features = ["cuda"]