[package]
name = "stucrs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.0"
ndarray-stats = "0.6.0"
rand = "0.8"
rand_distr = "0.4"
ndarray-rand = "0.15.0"
fxhash = "0.2.1"
mnist = "0.6.0"
thiserror = "2.0.18"

once_cell = "1.21"


# CUDA dependencies (optional)
cudarc = { version = "0.19.4", features = ["cuda-version-from-build-system"], optional = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:cudarc"]
debug = []

